# MediaSyncBridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-build-push.yml
src/: exceptions.py  server.py  types.py
src/api/: __init__.py  igdb.py  kinopoisk.py  shikimori.py
src/services/: __init__.py  base.py  igdb.py  imdb.py  kinopoisk.py  shikimori.py  steam.py
src/utils/: load_dotenv.py
