[project]
name = "MediaSyncBridge"
version = "0.1.0"
description = "A REST API service for parsing and processing links to media content from services like Kinopoisk, IGDB, Shikimori, IMDb, and Steam."
authors = [
    { name = "MrPandir", email = "MrPandir@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.116.1",
    "asyncopoisk>=1.0.2",
    "async-igdb>=0.1.3",
    "shiki.py>=1.1.5",
    "uvicorn>=0.35.0",
]

readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.rye.scripts]
dev = "uvicorn src.server:app --host 0.0.0.0 --port 80 --reload"

[tool.rye]
managed = true
virtual = true
excluded-dependencies = [
    "setuptools",
    "tomli",
]
